grammars/tree-sitter-strudel/test/corpus/number_args.txt
==================
number_args
==================

setCps(100)

setCps(100/60)


---

(source_file
	(expression
		(function_call
			(identifier)
			(expression
				(number)
			)
		)
	)
	(expression
		(function_call
			(identifier)
			(expression
				(binary_expression
					(multiplicative_expression
						(binary_expression
							(number)
						)
						(binary_expression
							(number)
						)
					)
				)
			)
		)
	)
)
